exports[`authReducer should handle LOGIN_ERROR 1`] = `
Object {
  "AuthRequestState": Object {
    "isLoading": false,
  },
  "user": Object {
    "data": Object {},
    "error": "login-error",
    "hasRegistered": false,
    "isLoggedIn": false,
    "token": "",
  },
}
`;

exports[`authReducer should handle LOGIN_SUCCESS 1`] = `
Object {
  "AuthRequestState": Object {
    "isLoading": false,
  },
  "user": Object {
    "data": "testuser",
    "error": "",
    "hasRegistered": false,
    "isLoggedIn": true,
    "token": "testtoken",
  },
}
`;

exports[`authReducer should handle LOGOUT 1`] = `
Object {
  "AuthRequestState": Object {
    "isLoading": false,
  },
  "user": Object {
    "data": Object {},
    "isLoggedIn": false,
    "token": "",
  },
}
`;

exports[`authReducer should handle REGISTER_ERROR 1`] = `
Object {
  "AuthRequestState": Object {
    "isLoading": false,
  },
  "user": Object {
    "data": Object {},
    "error": "register-error",
    "hasRegistered": false,
    "isLoggedIn": false,
    "token": "",
  },
}
`;

exports[`authReducer should return initial state 1`] = `
Object {
  "AuthRequestState": Object {
    "isLoading": false,
  },
  "user": Object {
    "data": Object {},
    "error": Object {},
    "hasRegistered": false,
    "isLoggedIn": false,
    "token": "",
  },
}
`;
